Fix article nav spacing, and Darkroom theme button style

--- a/content/assets/themes/darkroom.css
+++ b/content/assets/themes/darkroom.css
@@ -281,13 +281,14 @@ nav {
     border-top: 1px dotted var(--plain-text);
     padding-top: 1em;
     grid-template-columns: 1fr 1em 1fr;
-    grid-template-rows: 2em 1fr 2em;
+    grid-template-rows: auto auto auto;
 }
 
 nav .more-articles-text {
     text-align: center;
     grid-row: 1/2;
     grid-column: 1/4;
+    margin: 0;
 }
 
 nav .nav-prev {
@@ -332,6 +333,7 @@ nav .footer-home-link-box {
 
 #theme-selector,
 #comments input,
+#comments button,
 #comments textarea {
     -webkit-appearance: none;
     appearance: none;
@@ -339,6 +341,11 @@ nav .footer-home-link-box {
     box-sizing: border-box;
     margin: 0 0 0.5em;
     padding: 0.2em 0.5em;
+}
+
+#theme-selector,
+#comments input,
+#comments textarea {
     border: 1px solid var(--plain-text);
     background-color: var(--input-bg);
     color: var(--plain-text);
@@ -347,6 +354,7 @@ nav .footer-home-link-box {
 
 #theme-selector {
     font-size: 80%;
+    border-radius: 0.5em;
 }
 
 #comments input {
@@ -356,6 +364,13 @@ nav .footer-home-link-box {
 #comments textarea {
     width: 100%;
     height: 10em;
+}
+
+#comments button {
+    border: 1px solid var(--plain-text);
+    background-color: var(--darker-bg);
+    color: var(--header-text);
+    border-radius: 0.5em;
 }
 
 @media (max-width: 47rem) {
